--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -1,32 +1,56 @@
 {
-    "seeking-you": {
-        "title": "Seeking You",
-        "description": "Meet people, but not in a <em>dating</em> kind of way.",
-        "content": ""
-    },
-    "geordie-nation": {
-        "title": "Geordie Nation",
-        "description": "A platform for businesses in Newcastle to connect.",
-        "content": ""
-    },
-    "streets-of-home": {
-        "title": "Streets of Home",
-        "description": "A buggy racing game through the streets of Newcastle-upon-tyne.",
-        "content": ""
-    },
-    "ubbc": {
-        "title": "United Boat Builders Cup",
-        "description": "I think this is another racing game.. but boats this time?",
-        "content": ""
-    },
-    "32k-tv": {
-        "title": "32K TV",
-        "description": "The next generation of Ultra-Ultra-Ultra High Definition TV, with a Crypto twist.",
-        "content": ""
-    },
-    "dual-energy": {
-        "title": "Dual Energy",
-        "description": "Buy some land, fill it with wind and solar generators... profit?",
-        "content": ""
-    }
+  "seeking-you": {
+    "title": "Seeking You",
+    "description": "Meet people, but not in a <em>dating</em> kind of way.",
+    "content": "",
+    "logo": "",
+    "date": "",
+    "links": [{}]
+  },
+  "geordie-nation": {
+    "title": "Geordie Nation",
+    "description": "A platform for businesses in Newcastle to connect.",
+    "content": "",
+    "logo": "",
+    "annouced-date": "12/04/2025",
+    "release-date": "12/04/2025",
+    "links": [{}]
+  },
+  "streets-of-home": {
+    "title": "Streets of Home",
+    "description": "A buggy racing game through the streets of Newcastle-upon-tyne.",
+    "content": "",
+    "logo": "",
+    "date": "",
+    "links": [{}]
+  },
+  "ubbc": {
+    "title": "United Boat Builders Cup",
+    "description": "I think this is another racing game.. but boats this time?",
+    "content": "",
+    "logo": "",
+    "date": "",
+    "links": [{}]
+  },
+  "32k-tv": {
+    "title": "32K TV",
+    "description": "The next generation of Ultra-Ultra-Ultra High Definition TV, with a Crypto twist.",
+    "content": "",
+    "logo": "",
+    "date": "",
+    "links": [
+      {
+        "label": "32k TV Website",
+        "url": "https://32k-tv-inc.com/"
+      }
+    ]
+  },
+  "dual-energy": {
+    "title": "Dual Energy",
+    "description": "Buy some land, fill it with wind and solar generators... profit?",
+    "content": "",
+    "logo": "",
+    "date": "",
+    "links": [{}]
+  }
 }
