feat: remove right margin on SideCard

--- a/src/app/projects.json
+++ b/src/app/projects.json
@@ -2,7 +2,7 @@
   "seeking-you": {
     "title": "Seeking You",
     "description": "Meet people, but not in a <em>dating</em> kind of way.",
-    "content": "",
+    "content": "<p>\"Someone\" has created a clone of Seeking You called \"<a href=\"https://seeking-you2.org\" target=\"_blank\" className=\"text-violet-500 font-bold\">Seeking You 2</a>\". This made Paul angry.</p>",
     "logo": "",
     "announceddate": "",
     "releasedate": "",
