--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.4",
+    "@types/mdx": "^2.0.13",
     "lucide": "^0.518.0",
     "lucide-react": "^0.518.0",
     "next": "15.3.4",
+    "next-mdx-remote-client": "^2.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
