--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "node src/lib/content.js && next build",
     "start": "next start",
+    "content": "node src/lib/content.js",
     "lint": "next lint"
   },
   "dependencies": {
